# empla

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  TELEMETRY_CHANGES.md  TODO.md  alembic.ini  environment.yml  jest.config.js  package-lock.json  package.json  pyproject.toml
.claude/: hooks.json  settings.json
.claude/hooks/: check-gstack.sh
.claude/skills/empla-bdi/: SKILL.md
.claude/skills/empla-capability/: SKILL.md
.claude/skills/empla-employee/: SKILL.md
.claude/skills/empla-testing/: SKILL.md
alembic/: env.py
alembic/versions/: 762947556cad_add_employee_activities_table.py  a1b2c3d4e5f6_add_integration_tables.py  b2c3d4e5f6g7_add_revocation_failed_status.py  c14764448a4d_initial_schema_with_all_phase_1_tables.py  c3d4e5f6g7h8_add_stopped_employee_status.py  d4e5f6g7h8i9_add_platform_oauth_apps.py  e5f6g7h8i9j0_add_mcp_server_support.py  f1a2b3c4d5e6_drop_goal_type_check_constraint.py  g2b3c4d5e6f7_expand_bdi_check_constraints.py  h3c4d5e6f7g8_add_semantic_confidence_index.py  i4d5e6f7g8h9_widen_audit_log_actor_type.py  j5e6f7g8h9i0_add_restarting_employee_status.py  k6f7g8h9i0j1_add_playbook_version_and_enabled.py  l7g8h9i0j1k2_add_inbox_messages.py
apps/dashboard/: index.html  package.json  tailwind.config.ts
apps/dashboard/src/: App.tsx  index.css
docs/: README.md  resources.md
docs/decisions/: 001-postgresql-primary-database.md  002-python-fastapi-stack.md  003-custom-bdi-architecture.md  004-defer-agent-framework-decision.md  005-pgvector-initial-vector-storage.md  006-proactive-loop-over-event-driven.md  009-custom-tool-execution-layer.md  010-capability-tool-execution-convergence.md  011-employee-process-architecture.md  ADR-008-multi-provider-llm.md  template.md
docs/design/: architecture-review-2026-03-18.md  bdi-engine.md  capabilities-layer.md  core-models.md  database-schema.md  future-vision.md  llm-routing.md  memory-system.md  proactive-loop.md  template.md
docs/guides/: local-development-setup.md  project-structure.md  telemetry-usage.md
docs/research/: rule-based-to-agentic-audit.md
empla/: __init__.py  settings.py
empla/api/: __init__.py  deps.py  main.py  ratelimit.py
empla/api/v1/: __init__.py  router.py
empla/bdi/: __init__.py  beliefs.py  goals.py  intentions.py
empla/capabilities/: __init__.py  base.py  compute.py  email.py  registry.py  workspace.py
empla/cli/: __init__.py  __main__.py
empla/core/: __init__.py  hooks.py
empla/core/loop/: __init__.py  events.py  execution.py  goal_management.py  intention_execution.py  models.py  perception.py  planning.py  protocols.py  reflection.py
empla/core/memory/: __init__.py  episodic.py  procedural.py  semantic.py  working.py
empla/core/telemetry/: __init__.py  analyzer.py  models.py  recorder.py  simulation.py  visualizer.py
empla/core/tools/: __init__.py  base.py  decorator.py  executor.py  health.py  mcp_bridge.py  registry.py  router.py  scheduler.py  trust.py
empla/employees/: __init__.py  base.py  catalog.py  catalog_backed.py  config.py  csm.py  exceptions.py  generic.py  identity.py  personality.py  pm.py  recruiter.py  registry.py  sales_ae.py  sdr.py
empla/integrations/: __init__.py  base.py  router.py  webhooks.py
empla/integrations/calendar/: __init__.py  adapter.py  tools.py
empla/integrations/crm/: __init__.py  adapter.py  tools.py
empla/integrations/email/: __init__.py  base.py  factory.py  gmail.py  test_adapter.py  tools.py  types.py
empla/llm/: __init__.py  anthropic.py  azure_openai.py  config.py  models.py  openai.py  provider.py  router.py  vertex.py
empla/models/: __init__.py  activity.py  audit.py  base.py  belief.py  database.py  employee.py  inbox.py  integration.py  memory.py  tenant.py
empla/runner/: __init__.py  __main__.py  health.py  main.py
empla/services/: __init__.py  activity_recorder.py  activity_service.py  employee_manager.py  inbox_service.py  metrics.py
scripts/: dev_e2e.sh  manage-platform-apps.py  seed-dev-data.py  setup-local-db.sh
tests/: README.md  __init__.py  architecture.test.js  claude.test.js  integration.test.js  readme.test.js  run-all-tests.js  test_bdi_integration.py  test_mcp_bridge.py  test_memory_integration.py  test_tool_decorator.py  test_tool_execution.py  test_tool_router.py  validate-links.js
tests/e2e/: __init__.py  test_bdi_loop_e2e.py  test_employee_lifecycle_e2e.py  test_employee_llm_e2e.py  test_full_e2e.py  test_runner_e2e.py  test_sales_ae_autonomous.py
tests/integration/: test_capabilities_loop_integration.py  test_compute_capability_integration.py  test_email_capability_integration.py  test_employee_lifecycle.py  test_goal_lifecycle.py  test_procedural_memory_loop.py  test_workspace_capability_integration.py
tests/servers/: __init__.py  calendar_mcp.py  crm_mcp.py  email_server.py  seed_scenario.py
tests/simulation/: README.md  __init__.py  capabilities.py  environment.py  test_autonomous_behaviors.py
tests/unit/: test_agentic_execution.py  test_bdi_beliefs_coverage.py  test_bdi_completion.py  test_bdi_goals_coverage.py  test_bdi_intentions_coverage.py  test_calendar_integration.py  test_capabilities_base.py  test_capabilities_compute.py  test_capabilities_email.py  test_capabilities_registry.py  test_capabilities_workspace.py  test_catalog_backed_employee.py  test_cli.py  test_cost_metrics.py  test_credential_injector.py  test_crm_integration.py  test_custom_employees.py  test_employee_identity.py  test_employee_manager.py  test_employee_manager_coverage.py  test_employees_base.py  test_employees_base_coverage.py  test_employees_config.py  test_employees_helpers.py  test_employees_personality.py  test_employees_roles.py  test_gmail_coverage.py  test_google_calendar_connector.py  test_hooks.py  test_hubspot_connector.py  test_inbox.py  test_integration_connect.py  test_integration_health.py  test_integration_service.py  test_integrations.py  test_integrations_email_base.py  test_integrations_email_gmail.py  test_jwt_auth.py  test_llm_router.py  test_llm_service_coverage.py  (+31 more)
(+120 files in other folders)
